fix overflow causing touch drag to reload pages on mobile when dragging down

--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 body {
     position: relative;
     background-color: oklch(0 0 0);
+    block-size: 100dvh;
+    overflow: hidden;
 }
 
 canvas {
